[gd_scene load_steps=36 format=4 uid="uid://bo45215kh6em2"]

[ext_resource type="Script" uid="uid://cm4gtmkygqxeq" path="res://Scripts/PlayerCamera.gd" id="1_8ioux"]
[ext_resource type="Texture2D" uid="uid://ddaxda35iflnl" path="res://Sprites/Chara2Upscaled.png" id="2_d7417"]
[ext_resource type="Script" uid="uid://dwvdrxx1bmb58" path="res://Scripts/npc.gd" id="2_xl3r1"]
[ext_resource type="TileSet" uid="uid://dlvmfvgfb1tfm" path="res://Resources/buildings.tres" id="3_xhqyo"]
[ext_resource type="Texture2D" uid="uid://f1dbjtyj4bv5" path="res://Sprites/GrassUpscaled.png" id="4_t4h6h"]
[ext_resource type="Texture2D" uid="uid://bdycwi24c8fe5" path="res://Sprites/Light.png" id="5_cmrj4"]
[ext_resource type="Script" uid="uid://bw8tx3uomldwr" path="res://Scripts/charater.gd" id="6_j1yc7"]
[ext_resource type="Texture2D" uid="uid://bc4j3pk158y6a" path="res://Sprites/CharaUpscaled.png" id="7_xifs7"]
[ext_resource type="Script" uid="uid://cm15tsymvrkw8" path="res://Scripts/dialogue_manager.gd" id="11_6lskt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eski5"]
atlas = ExtResource("2_d7417")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdf00"]
atlas = ExtResource("2_d7417")
region = Rect2(64, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_a6gra"]
animations = [{
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_eski5")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_pdf00")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_00tp4"]
size = Vector2(48, 56)

[sub_resource type="GDScript" id="GDScript_xl3r1"]
script/source = "extends CollisionShape2D
"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ehkex"]
texture = ExtResource("4_t4h6h")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_xersf"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_ehkex")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ykrsh"]
blend_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_ykrsh"]
atlas = ExtResource("7_xifs7")
region = Rect2(0, 512, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g14j6"]
atlas = ExtResource("7_xifs7")
region = Rect2(64, 512, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbegm"]
atlas = ExtResource("7_xifs7")
region = Rect2(0, 896, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehkex"]
atlas = ExtResource("7_xifs7")
region = Rect2(64, 896, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xersf"]
atlas = ExtResource("7_xifs7")
region = Rect2(0, 768, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tp4"]
atlas = ExtResource("7_xifs7")
region = Rect2(64, 768, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_77dp3"]
atlas = ExtResource("7_xifs7")
region = Rect2(0, 640, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tkv4"]
atlas = ExtResource("7_xifs7")
region = Rect2(64, 640, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m0f1"]
atlas = ExtResource("7_xifs7")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0q6j"]
atlas = ExtResource("7_xifs7")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhym6"]
atlas = ExtResource("7_xifs7")
region = Rect2(0, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3se8"]
atlas = ExtResource("7_xifs7")
region = Rect2(64, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uty7l"]
atlas = ExtResource("7_xifs7")
region = Rect2(0, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_45l4g"]
atlas = ExtResource("7_xifs7")
region = Rect2(64, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uo0j"]
atlas = ExtResource("7_xifs7")
region = Rect2(0, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxl6d"]
atlas = ExtResource("7_xifs7")
region = Rect2(64, 128, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_37kl0"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_ykrsh")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_g14j6")
}],
"loop": true,
"name": &"stand_down",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_vbegm")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ehkex")
}],
"loop": true,
"name": &"stand_left",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_xersf")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_00tp4")
}],
"loop": true,
"name": &"stand_right",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_77dp3")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_5tkv4")
}],
"loop": true,
"name": &"stand_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m0f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0q6j")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhym6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3se8")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uty7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45l4g")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uo0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxl6d")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppyta"]
size = Vector2(30, 29)

[node name="Scene" type="Node2D"]
y_sort_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(292, 709)
zoom = Vector2(1.2, 1.2)
limit_left = 0
limit_top = -320
position_smoothing_enabled = true
position_smoothing_speed = 2.0
script = ExtResource("1_8ioux")

[node name="CanvasGroup" type="CanvasGroup" parent="."]
y_sort_enabled = true
position = Vector2(1, 385)

[node name="StaticBody2D" type="StaticBody2D" parent="CanvasGroup" groups=["NPC"]]
y_sort_enabled = true
script = ExtResource("2_xl3r1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasGroup/StaticBody2D"]
y_sort_enabled = true
position = Vector2(231, 247)
sprite_frames = SubResource("SpriteFrames_a6gra")
autoplay = "default"
offset = Vector2(0, -64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasGroup/StaticBody2D"]
position = Vector2(231, 227)
shape = SubResource("RectangleShape2D_00tp4")
script = SubResource("GDScript_xl3r1")

[node name="Buildings" type="TileMapLayer" parent="CanvasGroup"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAPr/AAAAAAAAAAAAAPv/AAAAAAEAAAAAAPz/AAAAAAIAAAAAAP3/AAAAAAMAAAAAAP7/AAAAAAQAAAAAAP//AAAAAAUAAAAAAAAAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAIAAAAAAAgAAAABAPr/AAABAAAAAAABAPv/AAABAAEAAAABAPz/AAABAAIAAAABAP3/AAABAAMAAAABAP7/AAABAAQAAAABAP//AAABAAUAAAABAAAAAAABAAYAAAABAAEAAAABAAcAAAABAAIAAAABAAgAAAACAPr/AAACAAAAAAACAPv/AAACAAEAAAACAPz/AAACAAIAAAACAP3/AAACAAMAAAACAP7/AAACAAQAAAACAP//AAACAAUAAAACAAAAAAACAAYAAAACAAEAAAACAAcAAAACAAIAAAACAAgAAAADAPr/AAADAAAAAAADAPv/AAADAAEAAAADAPz/AAADAAIAAAADAP3/AAADAAMAAAADAP7/AAADAAQAAAADAP//AAADAAUAAAADAAAAAAADAAYAAAADAAEAAAADAAcAAAADAAIAAAADAAgAAAAEAPr/AAAEAAAAAAAEAPv/AAAEAAEAAAAEAPz/AAAEAAIAAAAEAP3/AAAEAAMAAAAEAP7/AAAEAAQAAAAEAP//AAAEAAUAAAAEAAAAAAAEAAYAAAAEAAEAAAAEAAcAAAAEAAIAAAAEAAgAAAAFAPr/AAAFAAAAAAAFAPv/AAAFAAEAAAAFAPz/AAAFAAIAAAAFAP3/AAAFAAMAAAAFAP7/AAAFAAQAAAAFAP//AAAFAAUAAAAFAAAAAAAFAAYAAAAFAAEAAAAFAAcAAAAFAAIAAAAFAAgAAAAGAPr/AAAGAAAAAAAGAPv/AAAGAAEAAAAGAPz/AAAGAAIAAAAGAP3/AAAGAAMAAAAGAP7/AAAGAAQAAAAGAP//AAAGAAUAAAAGAAAAAAAGAAYAAAAGAAEAAAAGAAcAAAAGAAIAAAAGAAgAAAAHAPr/AAAHAAAAAAAHAPv/AAAHAAEAAAAHAPz/AAAHAAIAAAAHAP3/AAAHAAMAAAAHAP7/AAAHAAQAAAAHAP//AAAHAAUAAAAHAAAAAAAHAAYAAAAHAAEAAAAHAAcAAAAHAAIAAAAHAAgAAAAIAPr/AAAIAAAAAAAIAPv/AAAIAAEAAAAIAPz/AAAIAAIAAAAIAP3/AAAIAAMAAAAIAP7/AAAIAAQAAAAIAP//AAAIAAUAAAAIAAAAAAAIAAYAAAAIAAEAAAAIAAcAAAAIAAIAAAAIAAgAAAAJAPr/AAAJAAAAAAAJAPv/AAAJAAEAAAAJAPz/AAAJAAIAAAAJAP3/AAAJAAMAAAAJAP7/AAAJAAQAAAAJAP//AAAJAAUAAAAJAAAAAAAJAAYAAAAJAAEAAAAJAAcAAAAJAAIAAAAJAAgAAAABAAcAAAAFAAgAAAACAAcAAAAFAAgAAAA=")
tile_set = ExtResource("3_xhqyo")

[node name="Grass" type="TileMapLayer" parent="CanvasGroup"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAMAAAAAAAAAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAIAAAAAAAYAAAAAAAMAAAAAAAcAAAAAAAQAAAAAAAgAAAAAAAUAAAAAAAkAAAAAAAYAAAAAAAoAAAAAAAcAAAAAAAsAAAAAAAgAAAAAAAwAAAAAAAkAAAABAAMAAAABAAAAAAABAAQAAAABAAEAAAABAAUAAAABAAIAAAABAAYAAAABAAMAAAABAAcAAAABAAQAAAABAAgAAAABAAUAAAABAAkAAAABAAYAAAABAAoAAAABAAcAAAABAAsAAAABAAgAAAABAAwAAAABAAkAAAACAAMAAAACAAAAAAACAAQAAAACAAEAAAACAAUAAAACAAIAAAACAAYAAAACAAMAAAACAAcAAAACAAQAAAACAAgAAAACAAUAAAACAAkAAAACAAYAAAACAAoAAAACAAcAAAACAAsAAAACAAgAAAACAAwAAAACAAkAAAADAAMAAAADAAAAAAADAAQAAAADAAEAAAADAAUAAAADAAIAAAADAAYAAAADAAMAAAADAAcAAAADAAQAAAADAAgAAAADAAUAAAADAAkAAAADAAYAAAADAAoAAAADAAcAAAADAAsAAAADAAgAAAADAAwAAAADAAkAAAAEAAMAAAAEAAAAAAAEAAQAAAAEAAEAAAAEAAUAAAAEAAIAAAAEAAYAAAAEAAMAAAAEAAcAAAAEAAQAAAAEAAgAAAAEAAUAAAAEAAkAAAAEAAYAAAAEAAoAAAAEAAcAAAAEAAsAAAAEAAgAAAAEAAwAAAAEAAkAAAAFAAMAAAAFAAAAAAAFAAQAAAAFAAEAAAAFAAUAAAAFAAIAAAAFAAYAAAAFAAMAAAAFAAcAAAAFAAQAAAAFAAgAAAAFAAUAAAAFAAkAAAAFAAYAAAAFAAoAAAAFAAcAAAAFAAsAAAAFAAgAAAAFAAwAAAAFAAkAAAAGAAMAAAAGAAAAAAAGAAQAAAAGAAEAAAAGAAUAAAAGAAIAAAAGAAYAAAAGAAMAAAAGAAcAAAAGAAQAAAAGAAgAAAAGAAUAAAAGAAkAAAAGAAYAAAAGAAoAAAAGAAcAAAAGAAsAAAAGAAgAAAAGAAwAAAAGAAkAAAAHAAMAAAAHAAAAAAAHAAQAAAAHAAEAAAAHAAUAAAAHAAIAAAAHAAYAAAAHAAMAAAAHAAcAAAAHAAQAAAAHAAgAAAAHAAUAAAAHAAkAAAAHAAYAAAAHAAoAAAAHAAcAAAAHAAsAAAAHAAgAAAAHAAwAAAAHAAkAAAAIAAMAAAAIAAAAAAAIAAQAAAAIAAEAAAAIAAUAAAAIAAIAAAAIAAYAAAAIAAMAAAAIAAcAAAAIAAQAAAAIAAgAAAAIAAUAAAAIAAkAAAAIAAYAAAAIAAoAAAAIAAcAAAAIAAsAAAAIAAgAAAAIAAwAAAAIAAkAAAAJAAMAAAAJAAAAAAAJAAQAAAAJAAEAAAAJAAUAAAAJAAIAAAAJAAYAAAAJAAMAAAAJAAcAAAAJAAQAAAAJAAgAAAAJAAUAAAAJAAkAAAAJAAYAAAAJAAoAAAAJAAcAAAAJAAsAAAAJAAgAAAAJAAwAAAAJAAkAAAA=")
tile_set = SubResource("TileSet_xersf")

[node name="Sprite2D" type="Sprite2D" parent="CanvasGroup"]
modulate = Color(1, 1, 0.627451, 0.596078)
z_index = 1
y_sort_enabled = true
material = SubResource("CanvasItemMaterial_ykrsh")
position = Vector2(495, 855)
rotation = 3.14159
scale = Vector2(-0.534, -0.498)
texture = ExtResource("5_cmrj4")
offset = Vector2(0, -576)

[node name="CharacterBody2D" type="CharacterBody2D" parent="." node_paths=PackedStringArray("camera")]
y_sort_enabled = true
position = Vector2(292, 709)
motion_mode = 1
script = ExtResource("6_j1yc7")
camera = NodePath("../Camera2D")
_walk_sprites = Dictionary[Vector2, String]({
Vector2(-1, -1): "left",
Vector2(-1, 0): "left",
Vector2(-1, 1): "left",
Vector2(0, -1): "up",
Vector2(0, 0): "down",
Vector2(0, 1): "down",
Vector2(1, -1): "right",
Vector2(1, 0): "right",
Vector2(1, 1): "right"
})

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(0, 64)
sprite_frames = SubResource("SpriteFrames_37kl0")
animation = &"stand_right"
autoplay = "stand_down"
offset = Vector2(0, -64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_ppyta")
debug_color = Color(0, 0.380392, 0.701961, 0.760784)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CharacterBody2D"]
remote_path = NodePath("../../Camera2D")

[node name="PanTimer" type="Timer" parent="CharacterBody2D"]

[node name="DialogueManager" type="Node" parent="."]
script = ExtResource("11_6lskt")

[node name="InteractionTimer" type="Timer" parent="DialogueManager"]

[connection signal="request_dialogue" from="CharacterBody2D" to="DialogueManager" method="_on_player_show_dialogue"]
[connection signal="dialogue_finished" from="DialogueManager" to="CharacterBody2D" method="_on_dialogue_manager_message_finished"]
[connection signal="dialogue_started" from="DialogueManager" to="CharacterBody2D" method="_on_dialogue_manager_message_started"]
